# BusinessBot

./: .gitignore  Dockerfile  README.md  db_prototype.drawio  docker-compose.yml
src/: .gitignore  pyproject.toml  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 1cc45b0f97f2_create_models.py  6b47aad96eac_create_revision.py  9ea7aabc7e0d_add_user_chat_id.py
src/app/: config.py  fill_message_template_table.py  main.py
src/app/database/: container.py  database.py  models.py
src/app/database/serializers/: delayed_message_serializer.py  message_template_serializer.py  user_serializer.py
src/app/database/services/: delayed_message_service.py  message_template_service.py  user_service.py
src/app/utils/: script_handler.py
