[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Arkadiy <goryunov.arkadiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
pyrogram = "^2.0.106"
loguru = "^0.7.2"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
